--- a/appinfo.json
+++ b/appinfo.json
@@ -1,18 +1,30 @@
 {
-    "longName": "ButtonsHandlerSample",
-    "versionCode": 1,
-    "shortName": "ButtonsHandlerSample",
-    "capabilities": [
-        ""
-    ],
-    "resources": {
-        "media": []
-    },
-    "versionLabel": "1.0",
+    "versionLabel": "1.5.50415.2",
     "watchapp": {
         "watchface": false
     },
-    "uuid": "1c7b06f8-e3c4-41e8-8fae-925b94770108",
+    "capabilities": [
+        "location"
+    ],
     "appKeys": {},
-    "companyName": "bcapuano@gmail.com"
+    "longName": "ButtonsHandlerSample",
+    "shortName": "ButtonsHandlerSample",
+    "resources": {
+        "media": [
+            {
+                "menuIcon": true,
+                "file": "images/Balon 24x24.png",
+                "type": "png",
+                "name": "MENU_ICON"
+            },
+            {
+                "file": "images/Football 48x48.png",
+                "type": "png",
+                "name": "FOOTBALL"
+            }
+        ]
+    },
+    "versionCode": 1,
+    "companyName": "bcapuano@gmail.com",
+    "uuid": "1c7b06f8-e3c4-41e8-8fae-925b94770108"
 }
