--- a/vs/PebbleButtonSample/PebbleButtonSample.vcxproj.filters
+++ b/vs/PebbleButtonSample/PebbleButtonSample.vcxproj.filters
@@ -14,4 +14,17 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="C:\Users\b.capuano\Desktop\Pebble\Balon 24x24.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="C:\Users\b.capuano\Desktop\Pebble\Football 48x48.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\src\main.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
